# qml-delegatemodel

./: .gitignore  CMakeLists.txt  ContactClass.cpp  ContactListDelegate.qml  Main.qml  ModelClass.cpp  ModelClass.h  Page2.qml  contactClass.cpp  main.cpp  modelclass.cpp  modelclass.h  resources.qrc
android/: AndroidManifest.xml  gradle.properties  local.properties
android/src/com/example/contactsPicker/: MainActivity.java
